# Dynamic_Static.System

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.backup  Doxyfile  Dynamic_Static.cmake  ForceCMakeBuild.cpp  HeaderGenerator.Main.cpp  README.md
cmake/: Dynamic_Static.Core.cmake  FMOD.cmake  glew.cmake  glfw.cmake  imgui.cmake  stb.cmake
documentation/: Doxyfile
examples/: BasicGui.cpp  CMakeLists.txt  GLGears.cpp  TextRendering.cpp  gears-with-gui.cpp  gl-gears.cpp  gl-gears.hpp  im-gui.cpp
examples.ex/: BasicAudio.cpp  BasicGui.cpp  CMakeLists.txt  GLGears.cpp  ImGui.cpp  gears-with-gui.cpp  gl-gears.cpp  im-gui.cpp
examples.ex/ray-tracing/: CMakeLists.txt
examples.ex/ray-tracing/include/: camera.hpp  defines.hpp  hitable.hpp  hittable.hpp  rasterizer.hpp  ray-tracer.hpp  ray.hpp  renderer.hpp  sphere-vertices.hpp  sphere.hpp
examples.ex/ray-tracing/include/materials/: dialectric.hpp  lambert.hpp  material.hpp  metal.hpp
examples.ex/ray-tracing/source/: main.cpp
examples.ex/source/: gl-gears.cpp
examples/GLGears/: CMakeLists.txt
examples/GLGears/source/: Main.cpp
examples/OggVorbis/: CMakeLists.txt
examples/OggVorbis/source/: Main.cpp
examples/ray-tracing/: CMakeLists.txt
examples/ray-tracing/include/: camera.hpp  hittable.hpp  ray-tracer.hpp  ray.hpp  renderer.hpp  scene.hpp  sphere-indices.hpp  sphere.hpp  utilities.hpp
examples/ray-tracing/include/materials/: material.hpp
examples/ray-tracing/source/: hittable.cpp  main.cpp
include/: Dynamic_Static.System.hpp  dynamic_static.system.hpp
include.ex/: Dynamic_Static.System.hpp  dynamic_static.graphics.opengl.hpp  dynamic_static.system.hpp
include.ex/Dynamic_Static/System/: Defines.hpp  GLFW.hpp  Input.hpp  OpenGL.hpp  SDL.hpp  Video.hpp  Window.hpp
include.ex/Dynamic_Static/System/Audio/: Defines.hpp
include.ex/Dynamic_Static/System/Input/: Keyboard.hpp  Mouse.hpp
include.ex/Dynamic_Static/System/OpenGL/: Buffer.hpp  Defines.hpp  IndexBuffer.hpp  Mesh.hpp  Object.hpp  Program.hpp  Shader.hpp  State.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp
include.ex/Dynamic_Static/System/Video/: GLFW.hpp  GLFWWindow.hpp  Gui.hpp  OpenGL.hpp  Resolution.hpp  SDL.hpp  SDLWindow.hpp  Window.hpp
include.ex/Dynamic_Static/System/Window/: GLFWWindow.hpp  SDLWindow.hpp  Window.GLFW.inl  Window.SDL.inl  Window.hpp
include.ex/dynamic_static/graphics/opengl/: buffer.hpp  mesh.hpp  program.hpp  texture.hpp  vertex-array.hpp  vertex.hpp
include.ex/dynamic_static/system/: defines.hpp  gamepad.hpp  gui.hpp  input.hpp  opengl.hpp  window.hpp
include.ex/dynamic_static/system/input/: keyboard.hpp  mouse.hpp
include.ex/dynamic_static/system/opengl/: buffer.hpp  defines.hpp  gui.hpp  index-buffer.hpp  mesh.hpp  object.hpp  program.hpp  shader.hpp  texture.hpp  vertex-array.hpp  vertex-buffer.hpp  vertex.hpp
include/Dynamic_Static/System/: Application.hpp  Audio.ex.hpp  Audio.hpp  Defines.ex.hpp  Defines.hpp  Format.ex.hpp  Format.hpp  GLInclude.hpp  Gui.ex.hpp  Gui.hpp  Image.Ex.hpp  Image.hpp  Input.ex.hpp  Input.hpp  Object.hpp  OpenGL.ex.hpp  OpenGL.hpp  Resolution.hpp  Text.ex.hpp  Text.hpp  Window.ex.hpp  Window.hpp
include/Dynamic_Static/System.Ex/: Defines.hpp  OpenGL.hpp  Window.hpp
include/Dynamic_Static/System/Audio/: AudioTest.hpp  Defines.ex.hpp  Defines.hpp
include/Dynamic_Static/System/Image/: BasicImage.hpp  Image.ex.hpp  Image.hpp  ManagedImage.ex.hpp  ManagedImage.hpp  UnmanagedImage.ex.hpp  UnmanagedImage.hpp  WriteableImage.ex.hpp  WriteableImage.hpp  WriteableUnmanagedImage.ex.hpp  WriteableUnmanagedImage.hpp
include/Dynamic_Static/System/Input/: Keyboard.ex.hpp  Keyboard.hpp  Mouse.ex.hpp  Mouse.hpp
include/Dynamic_Static/System/OpenGL/: Buffer.ex.hpp  Buffer.hpp  Defines.ex.hpp  Defines.hpp  Gui.Renderer.ex.hpp  Gui.Renderer.hpp  IndexBuffer.ex.hpp  IndexBuffer.hpp  Mesh.ex.hpp  Mesh.hpp  Object.ex.hpp  Object.hpp  Program.ex.hpp  Program.hpp  Shader.ex.hpp  Shader.hpp  State.ex.hpp  State.hpp  Texture.ex.hpp  Texture.hpp  Vertex.ex.hpp  Vertex.hpp  VertexArray.ex.hpp  VertexArray.hpp  VertexBuffer.ex.hpp  VertexBuffer.hpp
include/Dynamic_Static/System/Text/: Font.ex.hpp  Font.hpp  Glyph.ex.hpp  Glyph.hpp  Layout.ex.hpp  Layout.hpp
include/Dynamic_Static/System/Video/: GLFW.hpp  GLFWWindow.hpp  Gui.hpp  Window.hpp
include/dynamic_static/graphics/opengl/: defines.hpp  gui.hpp  index-buffer.hpp  mesh.hpp  object.hpp  shader.hpp  texture.hpp  vertex-buffer.hpp
include/dynamic_static/system/: defines.hpp  image.hpp  input.hpp  keyboard.hpp  opengl.hpp  window.hpp
sandbox/: CMakeLists.txt
sandbox/source/: Main.cpp
source/: CMakeLists.txt
source.ex/Dynamic_Static/System/: Window.cpp
source.ex/dynamic_static/system/: glfw-window.hpp  gui.cpp  input.cpp  keyboard.cpp  window.cpp
source/Dynamic_Static/System/: Application.cpp  Format.cpp  Format.ex.cpp  GlfwWindow.cpp  GlfwWindow.ex.cpp  Gui.cpp  Gui.ex.cpp  Image.Ex.cpp  Image.cpp  Image.ex.cpp  Input.cpp  Input.ex.cpp  Object.cpp  Resolution.cpp  Window.cpp
source/Dynamic_Static/System.Ex/: Window.cpp
source/Dynamic_Static/System/Audio/: AudioTest.cpp
source/Dynamic_Static/System/Image/: Image.cpp  Image.ex.cpp  ManagedImage.cpp  ManagedImage.ex.cpp  UnmanagedImage.cpp  UnmanagedImage.ex.cpp  WriteableUnmanagedImage.cpp  WriteableUnmanagedImage.ex.cpp
source/Dynamic_Static/System/Input/: Input.Manager.cpp  Input.cpp  Keyboard.cpp  Keyboard.ex.cpp  Mouse.cpp  Mouse.ex.cpp
source/Dynamic_Static/System/Text/: Font.cpp  Font.ex.cpp  Glyph.cpp  Glyph.ex.cpp  Layout.cpp
source/dynamic_static/graphics/opengl/: buffer.cpp  gui.cpp  mesh.cpp  object.cpp  program.cpp  shader.cpp  texture.cpp
source/dynamic_static/system/: glfw-window.hpp  gui.cpp  image.cpp  mouse.cpp  window.cpp
source/dynamic_static/system/opengl/: buffer.cpp  gui.cpp  index-buffer.cpp  mesh.cpp  object.cpp  program.cpp  shader.cpp  texture.cpp  vertex-array.cpp  vertex-buffer.cpp
tests/: CMakeLists.txt  Image.Tests.cpp  ManagedImage.Tests.cpp  UnmanagedImage.Tests.cpp
tests/Input/: Keyboard.Tests.cpp
(+30 files in other folders)
